# authorship_attribution_example

./: .gitignore  README.md  attribution.py  pyproject.toml  report.md
src/authorship_attribution/: __init__.py
