[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "authorship-attribution"
version = "1.1.0"
description = "Naive Bayes authorship attribution classifier"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "docopt==0.6.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
